--- a/mobile-music.html
+++ b/mobile-music.html
@@ -52,14 +52,18 @@
                         </th>
                     </tr>
                     <tr>
-                        <td style="width: 50%;">
-                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded album-cover"/>
-                        </td>
-                        <td>
-                            <audio controls controlslist="nodownload" loop>
-                                <source src="Music/8-Bit havin' a fit.mp3" type="audio/mp3"/>
-                            </audio>
-                        </td>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td style="width: 33%;">
+                                    <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded album-cover"/>
+                                </td>
+                                <td>
+                                    <audio controls controlslist="nodownload" loop>
+                                        <source src="Music/8-Bit havin' a fit.mp3" type="audio/mp3"/>
+                                    </audio>
+                                </td>
+                            </tr>
+                        </table>
                     </tr>
                     <tr>
                         <th colspan="2" class="album-title">
@@ -69,13 +73,21 @@
                         </th>
                     </tr>
                     <tr>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td>
+                                    <audio controls controlslist="nodownload" loop>
+                                        <source src="Music/R4Rtheme.mp3" type="audio/mp3"/>
+                                    </audio>
+                                </td>
+                                <td style="width: 33%;">
+                                    <img src="images/Album Covers/R4R image.jpeg" class="rounded album-cover"/>
+                                </td>
+                            </tr>
+                        </table>
                         <td>
-                            <audio controls controlslist="nodownload" loop>
-                                <source src="Music/R4Rtheme.mp3" type="audio/mp3"/>
-                            </audio>
                         </td>
                         <td>
-                            <img src="images/Album Covers/R4R image.jpeg" class="rounded album-cover"/>
                         </td>
                     </tr>
                     <tr>
@@ -86,13 +98,21 @@
                         </th>
                     </tr>
                     <tr>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td style="width: 33%;">
+                                    <img src="images/Album Covers/Christmas Crunker.jpg" class="rounded album-cover"/>
+                                </td>
+                                <td>
+                                    <audio controls controlslist="nodownload" loop>
+                                        <source src="Music/ChristmasPresent.mp3" type="audio/mp3"/>
+                                    </audio>
+                                </td>
+                            </tr>
+                        </table>
                         <td>
-                            <img src="images/Album Covers/Christmas Crunker.jpg" class="rounded album-cover"/>
                         </td>
                         <td>
-                            <audio controls controlslist="nodownload" loop>
-                                <source src="Music/ChristmasPresent.mp3" type="audio/mp3"/>
-                            </audio>
                         </td>
                     </tr>
                     <tr>
@@ -103,13 +123,21 @@
                         </th>
                     </tr> 
                     <tr>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td>
+                                    <audio controls controlslist="nodownload" loop>
+                                        <source src="Music/Jumping Around.mp3" type="audio/mp3"/>
+                                    </audio>
+                                </td>
+                                <td style="width: 33%;">
+                                    <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded album-cover"/>
+                                </td>
+                            </tr>
+                        </table>
                         <td>
-                            <audio controls controlslist="nodownload" loop>
-                                <source src="Music/Jumping Around.mp3" type="audio/mp3"/>
-                            </audio>
                         </td>
                         <td>
-                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded album-cover"/>
                         </td>
                     </tr>
                 </table>
