--- a/mobile-media.html
+++ b/mobile-media.html
@@ -40,7 +40,7 @@
             <div class="fadein">
                 <h1>
                     I'm not going to say the sheer number of services we upload to because I don't want to be
-                    here all day. Here are many
+                    here all focking day. Here are many
                 </h1>
                 <div>
                     <p>
@@ -83,7 +83,7 @@
                         Created with Will R's brain
                         <br/>Music from NewRinaldi by Alex P and Will R
                         <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
-                        the weraing of merch
+                        the wearing of merch
                         <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
                         <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender
                     </div>
