--- a/index.html
+++ b/index.html
@@ -65,8 +65,17 @@
                     </th>
                     <th style="padding-right: 15px;">
                         <p>
-                            We've got arguably the best merch in existance. From NewRinaldi Tops to
-                            NewRinaldi Hoodies, we've got literally everything. <br/> <br/> <br/> <br/> <br/> <br/> <br/>
+                            Not responcible for any death caused from wearing merch
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
                         </p>
                     </th>
                 </tr>
@@ -86,7 +95,7 @@
                 Created with Will R's brain
                 <br/>Music from NewRinaldi by Alex P and Will R
                 <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
-                the weraing of merch
+                the wearing of merch
                 <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
                 <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender
             </div>
