--- a/mobile-index.html
+++ b/mobile-index.html
@@ -68,8 +68,7 @@
             <tr>
                 <td>
                     <p>
-                        We've got arguably the best merch in existance. From NewRinaldi Tops to
-                        NewRinaldi Hoodies, we've got literally everything.
+                        Not responcible for any death caused by merch
                     </p>
                 </td>
             </tr>
@@ -89,7 +88,7 @@
                 Created with Will R's brain
                 <br/>Music from NewRinaldi by Alex P and Will R
                 <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
-                the weraing of merch
+                the wearing of merch
                 <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
                 <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender
             </div>
