--- a/mobile-music.html
+++ b/mobile-music.html
@@ -156,7 +156,7 @@
                         Created with Will R's brain
                         <br/>Music from NewRinaldi by Alex P and Will R
                         <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
-                        the weraing of merch
+                        the wearing of merch
                         <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
                         <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender innit
                     </div>
